--- a/styles/css/header/vtex.store-header.css
+++ b/styles/css/header/vtex.store-header.css
@@ -1,3 +1,33 @@
 .headerRowContainer--header__top{
     background-color: #F8971D;
 }
+
+.headerRowContentContainer--desktop__header--middle{
+    /* display: flex; 
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: space-between; */
+    background-color: #fff;
+    /* line-height: 50px; */
+    box-shadow: 0 3px 4px rgb(0 0 0 / 12%);
+} 
+/* 
+.headerRowContainer--desktop__header--middle{
+    background-color: #fff;
+    box-shadow: 0 3px 4px rgb(0 0 0 / 12%);
+} */
+
+.headerRowBackground--desktop__header--middle{
+    background-color: #fff;
+    box-shadow: 0 3px 4px rgb(0 0 0 / 12%);
+}
+/* .headerStickyRow--desktop__header--middle{
+    padding: 0 10em 0 10em;
+} */
+
+/* .headerRowContainer--desktop__header--middle{
+    display: flex; 
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: space-between;
+} */
