--- a/styles/css/header/vtex.menu.css
+++ b/styles/css/header/vtex.menu.css
@@ -2,15 +2,17 @@
     z-index: 999; 
    
 } */
-
+/**********************************************aca esta el menu con estilo******************/
 .menuContainerNav--desktop__header--menu{
   background-color: #fff;
   position: absolute;
-  top: 64px;
-  left: 15em;
+  top: 5.35em;
+  /* left: 15em; */
   z-index: 2;
   /* line-height: 50px;  */
   box-shadow: 0 3px 4px rgb(0 0 0 / 12%);
+  width: 100%;
+  height: auto;
 }
 
 .styledLinkContainer{
@@ -18,7 +20,8 @@
   padding: 1em;
   /* font-size: 0.5em; */
 }
-
-/* .menuContainer--desktop__header--menu{
-  width: 10em;
+/* 
+.menuContainer--desktop__header--menu{
+  width: 80%;
+  margin: 0%;
 } */
