--- a/styles/css/vtex.store-components.css
+++ b/styles/css/vtex.store-components.css
@@ -16,5 +16,32 @@
 }
 
 .imageElement--header__menu--animals{
-    width: 90%;
+    width: 80%;
+}
+
+.imageElement--header__menu--animals2{
+    width: 70%;
+}
+
+.imageElement--mobile__header--menu-dog, 
+.imageElement--mobile__header--menu-cat {
+    width: 30%;
+    padding: 1em 0;
+}
+
+.container{
+    padding: 0%;
+}
+
+.searchBarContainer{
+    background-color: #f2f2f2;
+    padding: 5px 20px;
+    width: 100%;
+}
+
+.searchBarIcon--search{
+    content: "\e99e";
+    font-family: kanu-icons;
+    font-size: 20px;
+    color: #f8971d;
 }
