--- a/styles/css/vtex.store-components.css
+++ b/styles/css/vtex.store-components.css
@@ -34,7 +34,7 @@
 }
 
 .searchBarContainer{
-    background-color: #f2f2f2;
+    /* background-color: #f2f2f2; */
     padding: 5px 20px;
     width: 100%;
 }
