--- a/styles/css/header/vtex.rich-text.css
+++ b/styles/css/header/vtex.rich-text.css
@@ -31,11 +31,10 @@
     height: 34px;
     text-align: center;
     cursor: pointer;
+    margin-right: 3em;
 }
 
 .paragraph--desktop__header--pqr{
     margin: 0;
     line-height: 34px;
-    font-family: "RobotoSlab";
-    font-weight: 400;
 }
