--- a/styles/css/home/vtex.slider-layout.css
+++ b/styles/css/home/vtex.slider-layout.css
@@ -1,6 +1,6 @@
 .sliderLayoutContainer--home_slider{
     max-width: 100%;
-    margin: auto 0 1em;
+    margin: 4em 0; 
 }
 .paginationDotsContainer--home_slider{
     padding-bottom: 7px;
