--- a/styles/css/header/vtex.menu.css
+++ b/styles/css/header/vtex.menu.css
@@ -15,8 +15,16 @@
   margin: 0 10em 0 6.5em;
 }
 
+.menuItem--department-main:hover{
+  cursor: pointer;
+  background: #f7f7f7;
+  color: #000;
+  border-bottom: 2px solid #f8971d;
+}
+
 .menuItem--department-main{
   line-height: 25px; 
+  /* display: contents; */
 }
 
 .styledLinkContainer{
@@ -27,24 +35,14 @@
   font-family: "RobotoSlab";
   font-weight: 400;
   font-size: 0.90rem;
-}
 
-.menuItem--department-main:hover{
-  cursor: pointer;
-  background: #f7f7f7;
-  color: #000;
-  border-bottom: 2px solid #f8971d;
 }
-
 .styledLinkContent--department-main{
   font-size: 0.75rem;
   color: #050505;
   margin: 0; 
+  display: contents;
 }
-
-/* .styledLink--department-main{
-  width: max-content;
-} */
 
 .accordionIcon--department-main{
   display: none; 
