--- a/styles/css/header/vtex.flex-layout.css
+++ b/styles/css/header/vtex.flex-layout.css
@@ -68,10 +68,18 @@
     flex-direction: column;
 }
 
-.stretchChildrenWidth{
+.flexRowContent--global__home--minicart-footer
+:global(.vtex-flex-layout-0-x-stretchChildrenWidth){
     width: 100% !important;
 }
 
+
 :global(.vtex-product-list-0-x-productImageContainer){
     margin: 0;
+}
+
+.flexColChild
+:global(.vtex-product-list-0-x-deleteIcon){
+    width: 1.5em;
+    height: 1.5em;
 }
