--- a/styles/css/header/vtex.store-header.css
+++ b/styles/css/header/vtex.store-header.css
@@ -13,18 +13,32 @@
     width: 100%;
 }
 
-/************ Header desktop *****************/
-
-.headerRowContainer--desktop__header--middle{
-    background-color: #F8971D;
-    padding: 0.5em 0 0.4em 7em;
+.headerRowContainer--header__bottom
+:global(.vtex-store-components-3-x-searchBarContainer){
+    background-color: #f2f2f2; 
+    padding: 5px 20px;
+    width: 100%;
 }
+
+/************ Header desktop *****************/
 
 .headerRowContainer--header__top{
     min-height: 10px;
     justify-content: center;
     /* margin: 0 10em */
 }
+
+.headerRowContainer--desktop__header--middle{
+    background-color: #F8971D;
+    padding: 0.5em 0 0.4em 7em;
+}
+
+.headerRowContainer--desktop__header--middle
+:global(.vtex-store-components-3-x-searchBarContainer){
+    background-color: #F8971D;
+    padding: 5px 80px 5px 120px;
+}
+
 .headerRowContentContainer--desktop__header--bottom{
     background-color: #fff;
     box-shadow: 0 3px 4px rgb(0 0 0 / 12%);
@@ -34,7 +48,6 @@
     background-color: #fff;
     box-shadow: 0 3px 4px rgb(0 0 0 / 12%);
 }
-
 
 
  /* .headerRowContainer--desktop__header--middle
