--- a/styles/css/vtex.store-components.css
+++ b/styles/css/vtex.store-components.css
@@ -39,7 +39,7 @@
     border: none;
 }
 
-.searchBarContainer{
+/* .searchBarContainer{
     background-color: #f2f2f2; 
     padding: 5px 20px;
     width: 100%;
@@ -50,7 +50,7 @@
         background-color: #F8971D !important;
         padding: 5px 100px;
     }
-}
+} */
 
 
 
