feat: add home category structure and styles on desktop

--- a/styles/css/header/vtex.menu.css
+++ b/styles/css/header/vtex.menu.css
@@ -112,7 +112,7 @@
 }
 
 .styledLinkContent--menu-offers::after{
-  content: url("assets/img/pata.png")
+  content: url("assets/img/mobile-menu-offers.png")
 }
 
 .styledLinkContent--menu-offers{
