--- a/styles/css/home/vtex.slider-layout.css
+++ b/styles/css/home/vtex.slider-layout.css
@@ -1,14 +1,31 @@
 .sliderLayoutContainer--home_slider{
     max-width: 100%;
-    margin: 4em 0; 
+    margin: 4em 0 1em 0;
 }
 .paginationDotsContainer--home_slider{
     padding-bottom: 7px;
 }
 
-/* .paginationDotsContainer--isActive{
-    background-color: black;
-} */
-.bg-emphasis {
-    background-color: black;
+.paginationDot--home_slider--isActive{
+    background-color: #000;;
+}
+
+
+/************** Slider mobile ******************/
+
+.sliderLayoutContainer--mobile__home--slider{
+    margin: 1em 0;
+    max-width: 100%;
+}
+
+.paginationDotsContainer--mobile__home--slider{
+    padding-bottom: 7px;
+}
+
+.caretIcon--mobile__home--slider{
+    display: none;
+}
+
+.paginationDot--mobile__home--slider--isActive{
+    background-color: #000;;
 }
