--- a/styles/css/home/vtex.rich-text.css
+++ b/styles/css/home/vtex.rich-text.css
@@ -2,7 +2,7 @@
     color: #fff;
     font-size: 30px;
     font-weight: bold;
-    font-family: "RobotoSlab";
+    /* font-family: "RobotoSlab"; */
     /* font-weight: 400; */
     /* margin-right: 5em; */
     /* margin-right: 5em; */
@@ -11,8 +11,8 @@
 /****** Categories ******/
 .paragraph--categories__seccion1--item{
     font-size: 12px;
-    font-family: "RobotoSlab";
-    font-weight: 400;
+    /* font-family: "RobotoSlab"; */
+    /* font-weight: 400; */
 }
 
 /******* Titles********/
@@ -27,22 +27,22 @@
     padding: 10px 15px;
     border-radius: 10px;
     border: 2px solid #050505;
-    font-family: "RobotoSlab";
-    font-weight: 400;
+    /* font-family: "RobotoSlab"; */
+    /* font-weight: 400; */
     font-size: 18px;
 }
 
 /******* Services *****/
 
 .paragraph--section__services1{
-    font-family: "RobotoSlab";
+    /* font-family: "RobotoSlab"; */
     font-weight: 600;
     font-size: 16px;
 }
 
 .paragraph--section__services2-text{
-    font-family: "RobotoSlab";
-    font-weight: 400;
+    /* font-family: "RobotoSlab"; */
+    /* font-weight: 400; */
     font-size: 15px;
     color: #3f3f40;
 }
