--- a/styles/css/header/vtex.menu.css
+++ b/styles/css/header/vtex.menu.css
@@ -10,7 +10,7 @@
   height: auto;
 }
 .menuContainer--desktop__header--menu{
-  margin: 0 10em 0 6.5em;
+  margin: 0 9em 0 9.1em;
 }
 
 .menuItem--department-main:hover{
@@ -24,20 +24,24 @@
   line-height: 25px; 
 }
 
-.styledLinkContainer{
+/* .styledLinkContainer{
   margin: 0;
   padding: 1em;
+} */
+
+.styledLinkContainer--department-main{
+  margin: 0;
+  padding: 1em 1.7em;
 }
 
 .styledLinkContent{
-  font-family: "RobotoSlab";
-  font-weight: 400;
+  /* font-weight: 400; */
   font-size: 0.90rem;
 }
 
 .styledLinkContent--department-main{
-  font-size: 0.85rem;
-  color: #050505;
+  font-size: 12px;
+  /* color: #050505; */
   margin: 0; 
   display: contents;
 }
@@ -63,8 +67,8 @@
   text-decoration: none;
   color: #f8971d;
   font-weight: bold;
-  font-family: "RobotoSlab";
-  font-size: 16px;
+  /* font-family: "RobotoSlab"; */
+  font-size: 14px;
 }
 
 .menuContainer--block-container
@@ -75,9 +79,9 @@
 .menuContainer--block-container
 :global(.vtex-store-link-0-x-link--items__submenu){
   text-decoration: none;
-  color:#050505;
-  font-family: "RobotoSlab";
-  font-size: 16px;
+  /* color:#050505; */
+  /* font-family: "RobotoSlab"; */
+  font-size: 14px;
 }
 
 .menuContainer--block-container
