--- a/styles/css/header/vtex.store-link.css
+++ b/styles/css/header/vtex.store-link.css
@@ -10,7 +10,7 @@
 .label--desktop__header--menu-offers{
     display: flex;
     justify-content: center;
-    font-family: "RobotoSlab";
+    /* font-family: "RobotoSlab"; */
     font-weight: bold;
     font-size: 0.75rem;
     padding: 0 5px 0 10px;
@@ -22,7 +22,7 @@
 
 /******************* menu mobile *************/
 .label--items__menu--mobile{
-    font-family: "RobotoSlab";
+    /* font-family: "RobotoSlab"; */
     font-size: 16px;
     color: #707070;
 }
@@ -36,7 +36,7 @@
     text-decoration: none;
     font-weight: bold;
     color: #707070;
-    font-family: "RobotoSlab";
+    /* font-family: "RobotoSlab"; */
     font-size: 18px;
 }
 
@@ -47,7 +47,7 @@
 .link--items__submenu{
     text-decoration: none;
     color:#050505;
-    font-family: "RobotoSlab";
+    /* font-family: "RobotoSlab"; */
     font-size: 17px;
     /* font-size: ; */
 }
